tests/errors/construction/initializer-decl-inside.fn
---
Description: Initializer list contains a var declaration
Expected: compile error
---

type Vector2
{
    x: f32
    y: f32

    init{}
}

type Program
{
    fn Main -> i32
    {
        var a = Vector2 { var x = 1.0 }
        return 0
    }
}
